--- a/src/styles/e97.css
+++ b/src/styles/e97.css
@@ -14,8 +14,12 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 80px;
     padding: 120px 0;
+}
+.e97-page .firstabout{
+    padding: 120px 0 0;
+    gap: 0;
 }
 .aboutgrid {
     display: grid;
@@ -54,7 +58,7 @@
     grid-row-start: 1;
     font-size: 16px;
     font-style: normal;
-    margin: -130px auto;
+    margin: -50px auto;
     margin-left: 5px;
     font-weight: 600;
     line-height: normal;
